[gd_scene load_steps=3 format=3 uid="uid://crpp7128oo18x"]

[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="1_7hgvn"]
[ext_resource type="Script" path="res://src/UI/MenuBar/FontConfig/style_box_container.gd" id="1_xlnbs"]

[node name="StyleBoxContainer" type="VBoxContainer"]
offset_right = 653.0
offset_bottom = 254.0
script = ExtResource("1_xlnbs")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Regular"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ExampleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Example"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Embolden"

[node name="EmboldenInput" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_7hgvn")]
layout_mode = 2
size_flags_horizontal = 3
type = 2
step = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spacing Glyph"

[node name="SpacingGlyphInput" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("1_7hgvn")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skew "

[node name="SkewInput" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("1_7hgvn")]
layout_mode = 2
size_flags_horizontal = 3
type = 2
step = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[connection signal="changed" from="MarginContainer/VBoxContainer/HBoxContainer2/EmboldenInput" to="." method="_on_embolden_input_changed"]
[connection signal="changed" from="MarginContainer/VBoxContainer/HBoxContainer3/SpacingGlyphInput" to="." method="_on_spacing_glyph_input_changed"]
[connection signal="changed" from="MarginContainer/VBoxContainer/HBoxContainer4/SkewInput" to="." method="_on_skew_input_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
